--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -149,7 +149,7 @@ menu:
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   # commonweal: /404/ || heartbeat
-  demo: /demo || th
+  demo: /demo-entry || th
 
 # Enable/Disable menu icons / item badges.
 menu_settings:
